# hd-lanelevel-topology

./: .gitignore  CMakeLists.txt  README.md
OSM-Only/data/output/: lanes_hybrid.wkt
OSM-Only/data/output/graph/: connections.csv  edges.csv  junctions.csv  nodes.csv
OSM-Only/src/: connectionBuilder.py  gdalReTile.py  getTIFF.py  graphBuilder.py  junctionDetection.py  laneTagAnalyzer.py  laneToPolyline.py  osmReader.py  randomTileIndices.json  reprojectTiles.py  runPipeline.py  xodrExporter.py
OpenCV + OSM/data/output/: lanes_hybrid.wkt
OpenCV + OSM/data/output/graph/: edges.csv  junctions.csv  nodes.csv
OpenCV + OSM/src/: graphBuilder.py  junctionDetection.py  laneDetection-cv.py  laneDetection-sk1.py  laneDetection-sk2.py  laneToPolyline.py  laneToPolyline2.py  osmReader.py  osmVerify.py  runPipeline.py  xodrExporter.py  xodrVerify.py
src/: getTIFF.py  osmReader.cpp  osmVerify.py
